Implementim i Entity Extraction dhe vizualizim me i mire i trendeve.

--- a/ArticleVisualizationPortal/ArticleVisualizationPortal.csproj
+++ b/ArticleVisualizationPortal/ArticleVisualizationPortal.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helper\Helper.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Article.cs" />
     <Compile Include="Models\ArticleDBContext.cs" />
